# ShipHappens

./: .gitignore  .vercelignore  Cargo.toml  README.md  project.godot  rust-toolchain.toml
assets/: ATTRIBUTION_0b7f32b3-16a4-4826-85bf-f6488b203ad6.md  ATTRIBUTION_2ddc5433-9306-4919-b5e9-09d0205a2866.md  ATTRIBUTION_47ad395d-6c7c-45f2-bfeb-d5571ad1d20c.md  ATTRIBUTION_4e2bd668-5a41-46bf-aaa7-968988401061.md  ATTRIBUTION_51063fad-eb8d-4f5b-9977-f4709e46f8fd.md  ATTRIBUTION_52c8b3e8-5c42-43fb-990e-6a8d325e3f1f.md  ATTRIBUTION_5a0db910-520c-406d-987f-b3914d7ab296.md  ATTRIBUTION_5a89ea4e-e527-43fd-9b20-57ef5264afe4.md  ATTRIBUTION_67347005-fea3-414e-b0c1-0ca4cd72d653.md  ATTRIBUTION_72a3a25a-b9ff-4a57-80bd-0b251b3295bb.md  ATTRIBUTION_82865f5d-ddc6-4c6d-86da-a4e7d3338b96.md  ATTRIBUTION_843525e4-f9df-4464-816c-c91b113fc392.md  ATTRIBUTION_9158f773-2e62-4897-a849-045f90be5f83.md  ATTRIBUTION_9ddef708-0313-434d-a244-248c718ec0a8.md  ATTRIBUTION_a054de51-7232-4641-8548-8c4833c6150d.md  ATTRIBUTION_c8454b2f-8c0e-4807-8892-a18d285db9e9.md  ATTRIBUTION_d29dce05-fe44-4316-8df8-1ccab89569e6.md  ATTRIBUTION_d695bcc7-54e3-41ca-abfa-91724570dde3.md  ATTRIBUTION_d80794dc-30c9-4b5e-b7e7-89ded8aab788.md  ATTRIBUTION_d840af1b-dde0-4a5a-870e-2afc90f69dc0.md  ATTRIBUTION_e9c9617c-daaf-4bea-ba46-59942d360967.md  ATTRIBUTION_ff7ef050-4f9c-4300-962a-d5231c519270.md  studio_pending.json  studio_registry.json
data/: job_manifest.json  player_defaults.json
docs/: ACCOUNTS.md  ASSET_WISHLIST.md  BOING_INTEGRATION.md  BRAND.md  CHARACTERS.md  DROP_IN.md  MAP_CREATOR.md  PACKAGING.md  PARTY_ROADMAP.md  ROADMAP.md  ROOMS.md  SCORING.md  STEAM.md  STUDIO_ASSETS.md  STUDIO_PROMPTS.md  TECH.md  WAGERING.md
scripts/: auto_rig_glb.py  build_procedural_pudgy.py  build_windows_release.ps1  import_dense_character_glb.py  import_immersive_studio_pack.py  import_nest_accessory_batch.py  import_rigged_character_glb.py  optimize_glb.py  polish_character_glb.py  register_studio_asset.py  rig_and_animate_pudgy.py  run_accounts_tunnel.ps1  run_mp_smoke_test.sh  sync_studio_prompt_assets.py  (+4 more)
services/accounts/: .env.example  Cargo.toml  Dockerfile  README.md  cloudflared.yml  docker-compose.yml
services/accounts/migrations/: 001_users.sql  002_wallet_secret.sql
services/accounts/src/: main.rs  wallet.rs
(+212 files in other folders)
