[package]
name = "pudgymon-accounts"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pudgymon-accounts"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
